# mujina-ros-tui

./: .gitattributes  LICENSE  README.md  THIRD_PARTY_NOTICES.md  mujina_assist_tui_codex_plan.md  pyproject.toml  start.sh
.github/workflows/: ci.yml
patches/mujina_ros/: 0001-harden-can-setup.patch  0002-harden-imu-driver.patch  0003-harden-motor-lib-response.patch  0004-harden-mujina-main-safety.patch
src/mujina_assist/: app.py  models.py
src/mujina_assist/services/: can.py  checks.py  devices.py  jobs.py  live_health.py  motors.py  policy.py  policy_manifest.py  processes.py  safety.py  terminals.py  upstream.py  workspace.py  zero.py  zero_profile.py
src/mujina_assist/tui/: __init__.py  app.py  screens.py
tests/: test_app.py  test_can.py  test_can_parser.py  test_checks.py  test_devices.py  test_jobs.py  test_live_health.py  test_motors.py  test_policy_manifest.py  test_preflight_gating.py  test_processes.py  test_safety.py  test_start_sh.py  test_state_serialization_design.py  test_terminals.py  test_tui_smoke.py  test_upstream.py  test_zero.py  test_zero_profile.py
