[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mujina-assist"
version = "0.1.0"
description = "Japanese guided CLI for setting up and operating mujina_ros"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13,<14",
    "textual>=0.80,<1",
    "typing-extensions>=4.10",
]

[project.scripts]
mujina-assist = "mujina_assist.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
